# Daily-Practice-25

./: Z_dailyLang.zsh  ____SCRIPT-3.txt  allProblems.txt  compileRunNotes.txt  dailyLang.txt  dailyLang.zsh  javaModifiers.txt
01-Problem/: 01-Problem.js  01-Problem.swift  01-Problem.ts  01_Problem.js  package-lock.json  zero_one_problem.py
01-Problem-Constant/: 01-Problem.js  01-Problem.zsh
02-Problem/: 02-Problem.py  02-Problem.swift
02-Problem-Function/: 02-Problem.js  02-Problem.zsh
03-Problem-If/: 03-Problem.js  03-Problem.swift  03-Problem.zsh  03_Problem.py
04-Problem-Loop/: 04-Problem-Loop.js  04-Problem-Loop.swift  04-Problem-Loop.txt  04-Problem-Loop.zsh  04_Problem_Loop.py
05-Problem-Variables/: 05-Problem-Variables.js  05-Problem-Variables.swift  05-Problem-Variables.zsh  05_Problem_Variables.py
06-Problem-Variables/: 06-Problem-Variables.js  06-Problem-Variables.swift  06-Problem-Variables.zsh  06_Problem_Variables.py
07-Problem-Variables/: 07-Problem-Variables.js  07-Problem-Variables.swift  07-Problem-Variables.txt  07-Problem-Variables.zsh  07_Problem_Variables.py
08-Problem-Function/: 08-Problem-Function.js  08-Problem-Function.swift  08-Problem-Function.txt  (+2 more)
SIDE-QUEST-RUST/pard-4-1-25/: Cargo.toml  change.rs  diesel.toml  scratch.rs
SIDE-QUEST-RUST/pard-4-1-25/aa12-backend-authenticate-me/: README-backend-phase-0.md
SIDE-QUEST-RUST/pard-4-1-25/backend-rust-psql-diesel-axum/: backend-phase-0.md
SIDE-QUEST-RUST/pard-4-1-25/migrations/2025-04-01-182910_users/: up.sql
SIDE-QUEST-RUST/pard-4-1-25/migrations/2025-04-01-183049_posts/: up.sql
SIDE-QUEST-RUST/pard-4-1-25/src/: db.rs  errors.rs  main.rs  schema.rs  scratchMain.rs
SIDE-QUEST-RUST/pard-4-1-25/src/config/: config.rs  mod.rs
SIDE-QUEST-RUST/pard-4-1-25/src/db/: mod.rs
SIDE-QUEST-RUST/pard-4-1-25/src/db/operations/: users.rs
SIDE-QUEST-RUST/pard-4-1-25/src/db/seeders/: database.rs  mod.rs  users.rs
SIDE-QUEST-RUST/pard-4-1-25/src/middleware/: authentication_middleware.rs  cookies.rs  cookiesScratch.rs  cors.rs  csrf.rs  mod.rs  security_headers.rs
SIDE-QUEST-RUST/pard-4-1-25/src/models/: api.rs  mod.rs  post.rs  user.rs
SIDE-QUEST-RUST/pard-4-1-25/src/routes/: authentication_handlers.rs  authentication_router.rs  general.rs  mod.rs  users.rs
SIDE-QUEST-RUST/pard-4-1-25/src/routes/api/: users.rs
SIDE-QUEST-RUST/pard-4-1-25/src/services/: authentication_service.rs
SIDE-QUEST-RUST/pard-4-1-25/src/services/authentication/: awsQ.txt  chatGPT.txt
SIDE-QUEST-RUST/pard-4-1-25/src/services/authentication_notes/: awsQ.txt  chatGPT.txt
SIDE-QUEST-RUST/pard-4-1-25/static/js/: csrf-test.js
Y_aAPrep/: _MAIN.js  (+23 more)
(+549 files in other folders)
