[package]
name = "pard-4-1-25"
version = "0.1.0"
edition = "2021"

[dependencies]
pq-sys = "0.6.0"                                                            # Rust binding to the PostgreSQL library
axum = "0.8.1"                                                              # Server
axum-macros = "0.5.0"                                                       # Server macros
diesel = { version = "2.2.8", features = ["postgres", "chrono", "r2d2"] }   # ORM
dotenvy = "0.15.7"                                                          # For getting environment variables

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.44.1", features = ["full"] }

cookie = "0.18.1"
csrf = "0.5.0"                                                              # CSRF protection
jsonwebtoken = "9.3.1"                                                      # JWT implementation

tower = "0.4"


tower-http = { version = "0.6.2", features = [                              # provides HTTP-specific middleware and utilities built on top of tower
    "catch-panic",                                                          # Convert panics into responses.
    "cors",                                                                 # CORS middleware
    "set-header",                                                           # Security headers middleware (helmet equivalent)
    "set-status",                                                           # Middleware to override status codes.
    "trace",                                                                # Middleware for HTTP request/response logging
    "validate-request",                                                     # Middleware that validates requests.
    "fs",
    "add-extension",
] }


tracing = "0.1.41"                                                          # Logging framework
tracing-subscriber = "0.3.19"                                               # Logging implementation

config = "0.13"                                                             # Configuration management with environment support
thiserror = "2.0.12"                                                        # Error handling
chrono = { version = "0.4", features = ["serde"] }


rand = "0.8"
tower-cookies = "0.11.0"

bcrypt = "0.15"

ring = "0.17"
base64 = "0.21"

time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
cargo-watch = "8.5.3"                                                       # Equivalent to nodemon
